--- a/src/app/modules/admin/users/user-profile/user-profile.component.html
+++ b/src/app/modules/admin/users/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
-<div class="flex flex-wrap md:flex-nowrap gap-6">
+<div class="flex flex-wrap md:flex-nowrap gap-4">
   <div class="w-full md:w-1/3">
     <div
-      class="p-6 rounded-md bg-surface border border-solid border-light shadow-sm flex flex-col gap-3"
+      class="p-4 rounded-md bg-surface border border-solid border-light shadow-sm flex flex-col gap-3"
     >
       <div class="flex gap-4 items-center mb-2">
         <div
@@ -10,39 +10,80 @@
           {{ "H" }}
         </div>
         <div class="flex flex-col gap-1">
-          <div class="font-medium text-primary">Hiep Nguyen</div>
+          <div class="font-medium text-lg text-primary">Hiep Nguyen</div>
           <div class="text-tertiary">Tutor</div>
         </div>
       </div>
       <div class="flex flex-col gap-1">
         <div class="text-tertiary flex gap-2 items-center">Email</div>
-        <div class="text-secondary">nguyenchinhhiep95@gmail.com</div>
+        <div class="text-secondary font-medium">nguyenchinhhiep95@gmail.com</div>
       </div>
       <div class="flex flex-col gap-1">
         <div class="text-tertiary flex gap-2 items-center">Date of birth</div>
-        <div class="text-secondary">10/03/1995</div>
+        <div class="text-secondary font-medium">10/03/1995</div>
       </div>
-      <div class="flex flex-col gap-1">
+      <div class="flex flex-col gap-2.5">
         <div class="text-tertiary flex gap-2 items-center">
           Languages I know
         </div>
-        <div class="text-secondary">English - C2, Vietnamese - Native</div>
+        <div class="flex items-center flex-wrap gap-2">
+          <div
+            class="rounded-full border border-solid border-light px-3 py-1 bg-gray-200 font-medium text-sm"
+          >
+            English - C1
+          </div>
+          <div
+            class="rounded-full border border-solid border-light px-3 py-1 bg-gray-200 font-medium text-sm"
+          >
+            Vietnamese - Native
+          </div>
+        </div>
       </div>
-      <div class="flex flex-col gap-1">
+      <div class="flex flex-col gap-2">
         <div class="text-tertiary flex gap-2 items-center">
           Languages I teach
         </div>
-        <div class="text-secondary">English</div>
+        <div class="flex items-center flex-wrap gap-2">
+          <div
+            class="rounded-full border border-solid border-light px-3 py-1 bg-gray-200 font-medium text-sm"
+          >
+            English
+          </div>
+        </div>
       </div>
-      <div class="flex flex-col gap-1">
+      <div class="flex flex-col gap-2">
         <div class="text-tertiary flex gap-2 items-center">I teach</div>
-        <div class="text-secondary">
-          IELTS, TOEIC, Grammar, Writing, Communication...
+        <div class="flex items-center flex-wrap gap-2">
+          <div
+            class="rounded-full border border-solid border-light px-3 py-1 bg-gray-200 font-medium text-sm"
+          >
+            IELTS
+          </div>
+          <div
+            class="rounded-full border border-solid border-light px-3 py-1 bg-gray-200 font-medium text-sm"
+          >
+            TOEIC
+          </div>
+          <div
+            class="rounded-full border border-solid border-light px-3 py-1 bg-gray-200 font-medium text-sm"
+          >
+            Grammar
+          </div>
+          <div
+            class="rounded-full border border-solid border-light px-3 py-1 bg-gray-200 font-medium text-sm"
+          >
+            Writing
+          </div>
+          <div
+            class="rounded-full border border-solid border-light px-3 py-1 bg-gray-200 font-medium text-sm"
+          >
+            Communication
+          </div>
         </div>
       </div>
       <div class="flex flex-col gap-1">
         <div class="text-tertiary flex gap-2 items-center">Experience</div>
-        <div class="text-secondary">More than 2 years</div>
+        <div class="text-secondary font-medium">More than 2 years</div>
       </div>
     </div>
   </div>
@@ -109,11 +150,7 @@
           <div class="flex flex-col gap-2">
             <div class="text-primary">How did you hear about us?</div>
             <div>
-              <div
-                class="text-secondary"
-              >
-                Friend / Family
-              </div>
+              <div class="text-secondary">Friend / Family</div>
             </div>
           </div>
         </div>
