--- a/src/material/_material-customs.scss
+++ b/src/material/_material-customs.scss
@@ -223,11 +223,11 @@
         display: flex;
         align-items: center;
         width: 88px;
-        padding: 0;
+        padding: 8px 0;
         border: 0;
 
         .mat-input-element {
-          padding: 11px 0;
+          padding: 3px 0;
           margin-top: 0;
         }
 
@@ -446,6 +446,8 @@
 /*  @ Inputs
 /* ----------------------------------------------------------------------------------------------------- */
 .mat-input-element {
+  @apply overflow-ellipsis;
+  
   &::placeholder {
     transition: none !important;
     @apply text-gray-400 #{'!important'};
@@ -857,7 +859,6 @@ mat-stepper {
   }
 }
 
-
 /* ----------------------------------------------------------------------------------------------------- */
 /*  Tabs
 /* ----------------------------------------------------------------------------------------------------- */
@@ -871,4 +872,12 @@ mat-stepper {
     height: 40px;
     text-decoration-line: none;
   }
+}
+
+/* ----------------------------------------------------------------------------------------------------- */
+/*  Chips
+/* ----------------------------------------------------------------------------------------------------- */
+.mat-chip {
+  font-weight: 500;
+  @apply bg-hover #{!important};
 }
