--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -5,7 +5,7 @@
     <div class="flex justify-between items-center gap-4 w-full py-4">
       <div class="flex items-center gap-2">
         <a
-          class="font-semibold  text-xl hover:no-underline cursor-pointer select-none"
+          class="font-semibold text-default text-xl hover:no-underline cursor-pointer select-none"
           routerLink="/"
           >Vietspeak</a
         >
