--- a/src/app/modules/admin/users/users.component.html
+++ b/src/app/modules/admin/users/users.component.html
@@ -65,7 +65,7 @@
                 />
                 <div
                   *ngIf="!element?.avatarUrl"
-                  class="w-9 h-9 rounded-full overflow-hidden flex justify-center items-center font-medium bg-primary text-white uppercase"
+                  class="w-9 h-9 rounded-full overflow-hidden flex justify-center items-center font-medium bg-gray-300 text-tertiary uppercase"
                 >
                   {{ element?.firstName?.charAt(0) || "H" }}
                 </div>
@@ -78,7 +78,7 @@
               {{ "Table.Name" | translate }}
             </th>
             <td mat-cell *matCellDef="let element; let i = index">
-              <a routerLink="1" class="whitespace-nowrap">
+              <a routerLink="1" class="whitespace-nowrap text-inherit underline">
                 {{ "Hiep Nguyen" }}
               </a>
             </td>
