--- a/src/app/modules/client/tutor/account/user-profile/user-profile.component.html
+++ b/src/app/modules/client/tutor/account/user-profile/user-profile.component.html
@@ -3,7 +3,7 @@
     <div
       class="w-full flex flex-col bg-surface rounded-md p-6 shadow-sm border border-solid border-light"
     >
-      <div class="font-medium  text-xl mb-3">
+      <div class="font-medium text-xl mb-3">
         {{ "TutorInfo.Basic" | translate }}
       </div>
 
@@ -26,8 +26,9 @@
             <!-- Change image -->
             <button
               type="button"
-              mat-stroked-button
+              mat-flat-button
               [color]="'primary'"
+              class="btn--sm"
               (click)="uploadProfilePictureFile.click()"
             >
               {{
@@ -41,9 +42,11 @@
               *ngIf="tutorProfileForm.get('profilePictureUrl')?.value"
               type="button"
               mat-button
+              [color]="'primary'"
+              class="btn--sm"
               (click)="onRemoveProfilePicture()"
             >
-              <div class="text-danger">Remove</div>
+              {{ "Action.Remove" | translate }}
             </button>
           </div>
         </div>
@@ -185,7 +188,7 @@
     <div
       class="w-full flex flex-col bg-surface rounded-md p-6 pb-2 shadow-sm border border-solid border-light"
     >
-      <div class="font-medium  text-xl mb-3">
+      <div class="font-medium text-xl mb-3">
         {{ "TutorInfo.Introduction" | translate }}
       </div>
       <mat-form-field appearance="fill" class="w-full" floatLabel="always">
@@ -238,7 +241,7 @@
     <div
       class="w-full flex flex-col bg-surface rounded-md p-6 pb-2 shadow-sm border border-solid border-light"
     >
-      <div class="font-medium  text-xl mb-3">
+      <div class="font-medium text-xl mb-3">
         {{ "TutorInfo.Teaching" | translate }}
       </div>
       <mat-form-field appearance="fill" class="w-full" floatLabel="always">
@@ -310,7 +313,7 @@
     <div
       class="w-full flex flex-col bg-surface rounded-md p-6 pb-2 shadow-sm border border-solid border-light"
     >
-      <div class="font-medium  text-xl mb-3">
+      <div class="font-medium text-xl mb-3">
         {{ "TutorInfo.Experience" | translate }}
       </div>
       <mat-form-field appearance="fill" class="w-full">
@@ -461,7 +464,7 @@
             </div>
             <button
               type="button"
-              mat-stroked-button
+              mat-flat-button
               [color]="'primary'"
               (click)="uploadFile.click()"
             >
