--- a/src/app/layout/layouts/admin/components/header/header.component.html
+++ b/src/app/layout/layouts/admin/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div
-  class="bg-surface border-0 border-b border-solid border-border border-light flex px-2 md:px-4 h-14"
+  class="flex px-4 h-14"
 >
-  <div class="flex justify-center items-center gap-2">
+  <div class="flex justify-center items-center gap-2 pl-2">
     <div class="block md:hidden">
       <button mat-icon-button type="button" (click)="toggleNavigation()">
         <mat-icon
@@ -12,7 +12,7 @@
     </div>
 
     <a
-      class="font-semibold text-current text-lg hover:no-underline cursor-pointer select-none"
+      class="font-semibold text-current text-lg hover:no-underline cursor-pointer select-none hidden md:block"
       routerLink="admin"
       >Vietspeak</a
     >
