--- a/src/app/modules/admin/account/user-profile/user-profile.component.html
+++ b/src/app/modules/admin/account/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <div class="w-full">
   <form [formGroup]="profileForm" class="flex flex-col gap-4">
     <div
-      class="bg-white rounded-md p-6 pb-2 shadow-sm border border-solid border-gray-200"
+      class="bg-white rounded p-6 pb-2 border border-solid border-gray-200"
     >
       <div class="font-medium text-gray-900 text-xl mb-3">
         {{ "UserProfile.Title" | translate }}
