--- a/src/app/modules/admin/users/user-detail/user-detail.component.html
+++ b/src/app/modules/admin/users/user-detail/user-detail.component.html
@@ -1,4 +1,4 @@
-<div class="w-full mx-auto min-h-full max-w-7xl -mt-4 relative">
+<div class="w-full mx-auto min-h-full max-w-7xl relative">
   <div class="mb-4">
     <nav mat-tab-nav-bar [disableRipple]="true" [color]="'primary'">
       <a
