--- a/src/app/modules/client/tutor/account/user-profile/user-profile.component.html
+++ b/src/app/modules/client/tutor/account/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <div class="w-full">
   <form [formGroup]="tutorProfileForm" class="flex flex-col gap-4">
     <div
-      class="w-full flex flex-col bg-surface rounded-md p-6 shadow-sm border border-solid border-light"
+      class="w-full flex flex-col bg-surface rounded p-6 border border-solid border-light"
     >
       <div class="font-medium text-xl mb-3">
         {{ "TutorInfo.Basic" | translate }}
@@ -186,7 +186,7 @@
       </mat-form-field>
     </div>
     <div
-      class="w-full flex flex-col bg-surface rounded-md p-6 pb-2 shadow-sm border border-solid border-light"
+      class="w-full flex flex-col bg-surface rounded p-6 pb-2 border border-solid border-light"
     >
       <div class="font-medium text-xl mb-3">
         {{ "TutorInfo.Introduction" | translate }}
@@ -239,7 +239,7 @@
       </mat-form-field>
     </div>
     <div
-      class="w-full flex flex-col bg-surface rounded-md p-6 pb-2 shadow-sm border border-solid border-light"
+      class="w-full flex flex-col bg-surface rounded p-6 pb-2 border border-solid border-light"
     >
       <div class="font-medium text-xl mb-3">
         {{ "TutorInfo.Teaching" | translate }}
@@ -311,7 +311,7 @@
       </mat-form-field>
     </div>
     <div
-      class="w-full flex flex-col bg-surface rounded-md p-6 pb-2 shadow-sm border border-solid border-light"
+      class="w-full flex flex-col bg-surface rounded p-6 pb-2 border border-solid border-light"
     >
       <div class="font-medium text-xl mb-3">
         {{ "TutorInfo.Experience" | translate }}
