--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full min-h-full gap-10 flex flex-col items-center bg-gray-100 relative px-4"
+  class="w-full min-h-full gap-10 flex flex-col items-center bg-primary-50 bg-opacity-80 relative px-4"
 >
   <div class="w-full max-w-7xl flex flex-col gap-6 items-center justify-start">
     <div class="flex justify-between items-center gap-4 w-full py-4">
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div
-      class="w-full max-w-md sm:bg-surface sm:p-8 sm:py-10 sm:rounded-md sm:shadow-sm sm:border border-solid border-light"
+      class="w-full max-w-md sm:bg-surface sm:p-8 sm:py-10 sm:rounded sm:sm:border border-solid border-light"
     >
       <div class="flex flex-col gap-3 text-center">
         <div class="font-medium  text-2xl">
