--- a/src/app/modules/admin/users/user-profile/user-profile.component.html
+++ b/src/app/modules/admin/users/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-wrap md:flex-nowrap gap-4">
   <div class="w-full md:w-1/3">
     <div
-      class="p-4 rounded-md bg-surface border border-solid border-light shadow-sm flex flex-col gap-3"
+      class="p-4 rounded bg-surface border border-solid border-light flex flex-col gap-3"
     >
       <div class="flex gap-4 items-center mb-2">
         <div
@@ -90,7 +90,7 @@
   <div class="w-full md:w-2/3">
     <div class="flex flex-col gap-4">
       <div
-        class="p-6 rounded-md bg-surface border border-solid border-light shadow-sm flex flex-col gap-4"
+        class="p-6 rounded bg-surface border border-solid border-light flex flex-col gap-4"
       >
         <div class="font-medium text-secondary text-xl">
           {{ "Introduction" | translate }}
@@ -117,7 +117,7 @@
         </div>
       </div>
       <div
-        class="p-6 rounded-md bg-surface border border-solid border-light shadow-sm flex flex-col gap-3"
+        class="p-6 rounded bg-surface border border-solid border-light flex flex-col gap-3"
       >
         <div class="font-medium text-secondary text-xl">
           {{ "Certificates" | translate }}
@@ -128,7 +128,7 @@
       </div>
 
       <div
-        class="p-6 rounded-md bg-surface border border-solid border-light shadow-sm flex flex-col gap-4"
+        class="p-6 rounded bg-surface border border-solid border-light flex flex-col gap-4"
       >
         <div class="font-medium text-secondary text-xl">
           {{ "Motivation" | translate }}
