--- a/src/app/modules/admin/users/users.component.html
+++ b/src/app/modules/admin/users/users.component.html
@@ -1,8 +1,8 @@
 <div class="w-full mx-auto min-h-full flex flex-col max-w-7xl">
   <div class="flex gap-2 flex-wrap md:flex-nowrap justify-between">
-    <div class="font-medium text-2xl w-full">
+    <!-- <div class="font-medium text-2xl w-full">
       {{ "Users.Title" | translate }}
-    </div>
+    </div> -->
     <mat-form-field
       class="w-full md:w-1/2 mat-form-field--sm"
       appearance="fill"
@@ -33,13 +33,11 @@
     </mat-form-field>
   </div>
   <div class="flex-grow">
-    <div
-      class="border border-solid border-light rounded-md shadow-sm overflow-hidden"
-    >
+    <div class="border border-solid border-light rounded overflow-hidden">
       <div class="overflow-auto">
         <table mat-table [dataSource]="dataSource" class="w-full" matSort>
           <ng-container matColumnDef="no">
-            <th mat-header-cell *matHeaderCellDef class="w-24">
+            <th mat-header-cell *matHeaderCellDef class="w-20">
               {{ "Table.No" | translate }}
             </th>
             <td mat-cell *matCellDef="let element; let i = index">
@@ -78,9 +76,7 @@
               {{ "Table.Name" | translate }}
             </th>
             <td mat-cell *matCellDef="let element; let i = index">
-              <a routerLink="1" class="whitespace-nowrap text-inherit underline">
-                {{ "Hiep Nguyen" }}
-              </a>
+              {{ "Hiep Nguyen" }}
             </td>
           </ng-container>
 
@@ -140,7 +136,7 @@
                     ></mat-icon>
                     <span>{{ "Action.Reject" | translate }}</span>
                   </button>
-                  <button type="button" mat-menu-item>
+                  <button type="button" mat-menu-item routerLink="1">
                     <mat-icon
                       class="text-danger"
                       svgIcon="mat_outline:edit"
