--- a/src/app/modules/client/onboarding/congratulations/congratulations.component.html
+++ b/src/app/modules/client/onboarding/congratulations/congratulations.component.html
@@ -1,8 +1,8 @@
 <div
-  class="w-full min-h-full flex flex-col gap-10 items-center bg-gray-100 relative px-4 justify-center"
+  class="w-full min-h-full flex flex-col gap-10 items-center bg-primary-50 bg-opacity-80 relative px-4 justify-center"
 >
   <div
-    class="w-full max-w-md sm:bg-surface p-8 py-10 sm:rounded-md sm:shadow-sm sm:border border-solid border-light"
+    class="w-full max-w-md sm:bg-surface p-8 py-10 sm:rounded sm:sm:border border-solid border-light"
   >
     <div class="flex flex-col gap-3 justify-center items-center">
       <mat-icon
