--- a/src/app/modules/client/onboarding/welcome/welcome.component.html
+++ b/src/app/modules/client/onboarding/welcome/welcome.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full min-h-full flex flex-col gap-6 items-center bg-gray-100 relative pb-20 px-4"
+  class="w-full min-h-full flex flex-col gap-6 items-center bg-primary-50 bg-opacity-80 relative pb-20 px-4"
 >
   <div class="w-full max-w-7xl flex flex-col gap-6 items-center justify-start">
     <div class="flex justify-between items-center gap-4 w-full py-4 h-16">
@@ -16,7 +16,7 @@
     </div>
 
     <div
-      class="w-full max-w-md sm:bg-surface p-8 py-10 sm:rounded-md sm:shadow-sm sm:border border-solid border-light"
+      class="w-full max-w-md sm:bg-surface p-8 py-10 sm:rounded sm:sm:border border-solid border-light"
     >
       <div
         class="font-medium  text-2xl text-center mb-6 flex flex-col gap-3 items-center justify-center"
