--- a/src/app/modules/client/tutor/account/change-password/change-password.component.html
+++ b/src/app/modules/client/tutor/account/change-password/change-password.component.html
@@ -5,7 +5,7 @@
     class="flex flex-col gap-4"
   >
     <div
-      class="bg-surface rounded-md p-6 pb-2 shadow-sm border border-solid border-light"
+      class="bg-surface rounded p-6 pb-2 border border-solid border-light"
     >
       <div class="font-medium  text-xl mb-3">
         {{ "ChangePassword.Title" | translate }}
